--- a/package.json
+++ b/package.json
@@ -15,39 +15,40 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "lucide-react": "^0.344.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@react-pdf/renderer": "^3.4.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.479.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
-    "@hookform/resolvers": "^3.3.4",
-    "zod": "^3.22.4",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1",
-    "@react-pdf/renderer": "^3.4.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
+    "@eslint/js": "^9.22.0",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
+    "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "@vitest/coverage-v8": "^1.3.1",
-    "@vitest/ui": "^1.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
+    "@vitest/coverage-v8": "^3.0.8",
+    "@vitest/ui": "^3.0.8",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "jsdom": "^24.0.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "happy-dom": "^17.4.3",
+    "jsdom": "^26.0.0",
     "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
-    "vitest": "^1.3.1"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.2.1",
+    "vitest": "^3.0.8"
   }
 }
