--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
+    "@react-pdf/renderer": "^4.3.0",
+    "clsx": "^2.1.0",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.51.0",
-    "@hookform/resolvers": "^4.1.3",
-    "zod": "^3.22.4",
-    "clsx": "^2.1.0",
+    "react-i18next": "^15.4.1",
     "tailwind-merge": "^3.0.2",
-    "@react-pdf/renderer": "^4.3.0",
-    "i18next": "^24.2.3",
-    "i18next-browser-languagedetector": "^8.0.4",
-    "react-i18next": "^15.4.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@tailwindcss/postcss": "^4.0.14",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.5.2",
@@ -38,7 +39,6 @@
     "@vitejs/plugin-react-swc": "^3.6.0",
     "@vitest/coverage-v8": "^3.0.9",
     "@vitest/ui": "^3.0.8",
-    "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
@@ -47,7 +47,7 @@
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.14",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^6.2.2",
