--- a/package.json
+++ b/package.json
@@ -15,42 +15,50 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
-    "@react-pdf/renderer": "^4.3.0",
+    "lucide-react": "^0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.0",
+    "@hookform/resolvers": "^3.3.4",
+    "zod": "^3.22.4",
     "clsx": "^2.1.0",
-    "i18next": "^24.2.3",
-    "i18next-browser-languagedetector": "^8.0.4",
-    "lucide-react": "^0.487.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.55.0",
-    "react-i18next": "^15.4.1",
-    "tailwind-merge": "^3.2.0",
-    "zod": "^3.22.4"
+    "tailwind-merge": "^2.2.1",
+    "@react-pdf/renderer": "^3.4.0",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "react-i18next": "^14.1.0",
+    "@hello-pangea/dnd": "^16.5.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "@tailwindcss/postcss": "^4.1.3",
+    "@eslint/js": "^9.9.1",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.1",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "@vitest/coverage-v8": "^3.1.1",
-    "@vitest/ui": "^3.0.8",
-    "eslint": "^9.24.0",
+    "@vitest/coverage-v8": "^1.3.1",
+    "@vitest/ui": "^1.3.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^16.0.0",
-    "jsdom": "^26.0.0",
+    "globals": "^15.9.0",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
+    "postcss-import": "^16.0.1",
+    "postcss-nesting": "^12.0.1",
+    "postcss-preset-env": "^9.5.0",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.0",
-    "vite": "^6.2.5",
-    "vitest": "^3.0.8"
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "tailwindcss": "^3.4.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0",
+    "vite": "^5.4.2",
+    "vitest": "^1.3.1"
   }
 }
