--- a/package.json
+++ b/package.json
@@ -15,22 +15,27 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.5.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@react-pdf/renderer": "^3.4.0",
+    "@tailwindcss/postcss": "^4.1.3",
+    "clsx": "^2.1.0",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
-    "@hookform/resolvers": "^3.3.4",
-    "zod": "^3.22.4",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
-    "@react-pdf/renderer": "^3.4.0",
-    "i18next": "^23.10.1",
-    "i18next-browser-languagedetector": "^7.2.0",
     "react-i18next": "^14.1.0",
-    "@hello-pangea/dnd": "^16.5.0"
+    "tailwind-merge": "^2.2.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
@@ -50,12 +55,8 @@
     "postcss-nesting": "^12.0.1",
     "postcss-preset-env": "^9.5.0",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "tailwindcss": "^3.4.1",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/container-queries": "^0.1.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
