--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.0.1",
     "@react-pdf/renderer": "^4.3.0",
-    "clsx": "^2.1.0",
+    "@tailwindcss/postcss": "^4.1.3",
+    "clsx": "^2.1.1",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "lucide-react": "^0.487.0",
@@ -26,31 +28,35 @@
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
     "tailwind-merge": "^3.2.0",
-    "zod": "^3.22.4"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@tailwindcss/postcss": "^4.1.3",
-    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
-    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitejs/plugin-react-swc": "^3.8.1",
     "@vitest/coverage-v8": "^3.1.1",
-    "@vitest/ui": "^3.0.8",
+    "@vitest/ui": "^3.1.1",
     "eslint": "^9.24.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jsdom": "^26.0.0",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.2",
+    "tailwindcss": "^4.1.3",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.0",
+    "typescript-eslint": "^8.29.1",
     "vite": "^6.2.5",
-    "vitest": "^3.0.8"
+    "vitest": "^3.1.1"
   }
 }
