--- a/.github/workflows/infisical-secrets-check.yml
+++ b/.github/workflows/infisical-secrets-check.yml
@@ -4,16 +4,12 @@ on:
   workflow_dispatch:
   pull_request:
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
-  secrets-scan:
+  secrets-check:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
     steps:
-      - name: Infisical secrets check
-        uses: guibranco/github-infisical-secrets-check-action@v3.3.0
+      - name: Infisical Secrets Check
+        uses: guibranco/github-infisical-secrets-check-action@v3.3.1
