--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
 {
-  "semi": true,
+  "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "printWidth": 100,
   "trailingComma": "es5",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "printWidth": 80,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "endOfLine": "lf"
 }
