--- a/package.json
+++ b/package.json
@@ -5,58 +5,46 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
+    "build": "tsc -b && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
     "preview": "vite preview",
-    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,md,json}\" \"*.{js,ts,json}\"",
-    "format:write": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md,json}\" \"*.{js,ts,json}\"",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@hello-pangea/dnd": "^18.0.1",
-    "@hookform/resolvers": "^5.1.1",
-    "@react-pdf/renderer": "^4.3.0",
-    "@tailwindcss/postcss": "^4.1.10",
-    "clsx": "^2.1.1",
-    "i18next": "^25.2.1",
-    "i18next-browser-languagedetector": "^8.2.0",
-    "lucide-react": "^0.517.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.58.1",
-    "react-i18next": "^15.5.3",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.67"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "i18next": "^23.15.1",
+    "react-i18next": "^14.1.2",
+    "lucide-react": "^0.408.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "react-hook-form": "^7.52.1",
+    "@react-pdf/renderer": "^4.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@tailwindcss/postcss": "^4.1.10",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react-swc": "^3.10.2",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
-    "eslint": "^9.29.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.2.0",
-    "jsdom": "^26.1.0",
-    "postcss": "^8.5.6",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "tailwindcss": "^4.1.10",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/container-queries": "^0.1.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1",
-    "vite": "^6.3.5",
-    "vitest": "^3.2.4"
+    "@eslint/js": "^9.15.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "@vitejs/plugin-react-swc": "^3.7.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "jsdom": "^25.0.1",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "typescript": "~5.6.2",
+    "vite": "^6.0.1",
+    "vitest": "^2.1.8"
   }
 }
